[package]
name = "kipr"
version = "0.1.0"
authors = ["Graham King <graham@gkgk.org>"]
edition = "2018"
description = "Manage account details in GPG files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2.33"
glob = "0.3"
rpassword = "5.0"
rand = "0.7"
configparser = "3.0.2"
